k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: efh-prod
  labels:
    project: elevate-for-humanity
    env: prod
